tests/error/readCharOnInt.tpc
int main(void){
	int c;
	readc(c);
	return 0;
}